cmake_minimum_required(VERSION 3.10)
project( CMPW_SERVER )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}   -w")
add_executable(server server.cpp database.cpp cutil.cpp faceDetect.cpp )
target_link_libraries( server ${OpenCV_LIBS} -lpthread -lmysqlclient)
